--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="We connect you to the world of agri investment"
     />
     <link rel="apple-touch-icon" href="./Growpital_Icon.png" />
     <!--
